package ca.mcmaster.se2aa4.mazerunner;

import org.apache.commons.cli.*;


public class Main {

    public static void main(String[] args) throws Exception{
      
        Configuration configure = new Configuration();
        configure.configure(args);
        
    }
}
